--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Frencisco",
   "license": "ISC",
   "dependencies": {
+    "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mysql2": "^3.2.0"
+    "mysql2": "^3.2.0",
+    "node-cron": "^3.0.2"
   }
 }
