--- a/backend/package.json
+++ b/backend/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "nowty": "electron main.js",
     "test": ""
   },
   "keywords": [],
   "author": "Frencisco",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
+    "electron": "^32.1.2",
     "express": "^4.18.2",
     "mysql2": "^3.2.0",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "ps-tree": "^1.2.0"
   }
 }
