--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "nowty": "electron main.js",
+    "start-all": "concurrently \"npm run start-backend\" \"npm run start-frontend\" -k",
+    "start-backend": "nodemon app.js",
+    "start-frontend": "cd ../frontend && npm run dev",
     "test": ""
   },
   "keywords": [],
@@ -12,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "concurrently": "^9.0.1",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
